Skin: Add button skinning to HUD elements
(integrated from master branch change 0275d17 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/editor.less
+++ b/src/chrome/komodo/skin/plat/shared/editor.less
@@ -91,10 +91,27 @@
     {
         -moz-appearance: none !important;
         background-color: @hud-selection-background;
+        border: 0;
 
         & > hbox
         {
             -moz-appearance: none !important;
+        }
+    }
+
+    button:not(.button-plain)
+    {
+        -moz-appearance: none !important;
+        background-color: @hud-dock-color;
+        background-image: @hud-background-image;
+        color: @hud-foreground;
+        border: 0;
+        border-radius: 3px;
+        padding: 2px 4px;
+
+        &:hover
+        {
+            background-color: darken(@hud-dock-color, 20%);
         }
     }
 
