--- a/src/chrome/komodo/skin/partials/scheme-skinning.less
+++ b/src/chrome/komodo/skin/partials/scheme-skinning.less
@@ -3,6 +3,8 @@
     @foreground-focus:      lighten(@foreground, 20%);
     @background-contrast:   darken(@background, 10%);
     @border:                lighten(@background, 5%);
+    @background-button:     lighten(@background, 5%);
+    @background-button-hover:lighten(@background, 10%);
     @background-odd:        fade(darken(@background-contrast, 3%), 80%);
     @background-input:      lighten(@background-contrast, 10%);
     @background-image:      linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3));
@@ -14,9 +16,11 @@
     @foreground-focus:      darken(@foreground, 10%);
     @background-contrast:   darken(@background, 5%);
     @border:                darken(@background, 10%);
+    @background-button:     lighten(@background, 10%);
+    @background-button-hover:lighten(@background, 15%);
     @background-odd:        fade(darken(@background-contrast, 1%), 80%);
     @background-input:      darken(@background-contrast, 10%);
-    @background-image:      linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2));
+    @background-image:      linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1));
     @background-selected:   desaturate(@special, 20%);
 }
 
@@ -114,6 +118,18 @@
     ::-moz-selection {
         color: @special-fore !important;
         background: @special;
+    }
+    
+    button:not(.button-plain)
+    {
+        background-color: @background-button !important;
+        background-image: @background-image !important;
+        color: @foreground !important;
+
+        &:hover
+        {
+            background-color: @background-button-hover !important;
+        }
     }
 }
 
