UX: Pane icon tabs should be on top (consistency)
(integrated from master branch change c582e34 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/tabs.less
+++ b/src/chrome/komodo/skin/plat/shared/tabs.less
@@ -418,7 +418,7 @@ ko-pane[type="icons"] .pane-tabs-container tabs .tabstrip-box
 {
     background: @tab-box-background-icons;
     border-width: 0;
-    border-top: @tab-box-border;
+    border-bottom: @tab-box-border;
     
     box-shadow: @tab-box-box-shadow-icons;
 
