--- a/src/chrome/komodo/skin/plat/shared/_config/icons.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/icons.less
@@ -13,7 +13,7 @@
 @icon-folder-open:              url("chrome://komodo/skin/images/folder-open.png");
 @icon-folder-closed:            url("chrome://komodo/skin/images/folder-closed.png");
 @icon-folder-remote:            url("chrome://famfamfamsilk/skin/icons/folder_link.png");
-@icon-project:                  url('chrome://komodo/skin/images/project_icon.png');
+@icon-project:                  url("@{icon-url-prefix}box.png");
 
 /* SCC File Symbols */
 @icon-scc-ok:                   url('chrome://komodo/skin/images/status_icon_ok.png');
@@ -49,7 +49,7 @@
 @icon-folder-up:                url("chrome://komodo/skin/global/images/upLevel.png");
 @icon-newfolder:                url("chrome://komodo/skin/global/images/newDirectory.png");
 @icon-refreshFile:              url("chrome://komodo/skin/global/images/refreshFile.png");
-@icon-new-project:              url("chrome://komodo/skin/images/project_icon.png");
+@icon-new-project:              url("@{icon-url-prefix}box.png");
 @icon-new-file:                 url("@{icon-url-prefix}file-plus.png");
 @icon-new-window:               url("chrome://komodo/skin/images/komodo_16x16.png");
 @icon-open-file:                url("@{icon-url-prefix}folder-open.png");
@@ -404,7 +404,7 @@
 @icon-pref-syntaxChecking:      url("@{icon-url-prefix}checkmark-circle2.png");
 @icon-pref-testPlan:            url("@{icon-url-prefix}list.png");
 @icon-pref-web:                 url("@{icon-url-prefix}earth.png");
-@icon-pref-projects:            url("@{icon-url-prefix}briefcase.png");
+@icon-pref-projects:            url("@{icon-url-prefix}box.png");
 @icon-pref-windowsIntegration:  url("@{icon-url-prefix}windows8.png");
 @icon-pref-commando:            url("@{icon-url-prefix}command.png");
 @icon-pref-places:              url("@{icon-url-prefix}folder.png");
