fix: Quicklaunch: Background image should not be defined
(integrated from master branch change 9d5a9b6 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/partials/scheme-skinning.less
+++ b/src/chrome/komodo/skin/partials/scheme-skinning.less
@@ -219,5 +219,5 @@ statusbar#statusbarviewbox
 #quicklaunch
 {
     border: 0;
-    background-image: none;
+    background-image: none !important;
 }
