UI: Make icon tab box feel a bit less "square"
(integrated from master branch change e5c95de by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/_config/tabs.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/tabs.less
@@ -5,6 +5,7 @@
 @tab-box-background-image-vertical:     disabled;
 @tab-box-background-icons:              rgba(255,255,255,0.2);
 @tab-box-box-shadow-icons:              0px -3px 10px rgba(0,0,0,0.10);
+@tab-box-border-icons:                  1px solid rgba(0,0,0,0.15);
 @tab-box-content-background-color:      rgba(255,255,255,0.2);
 @tab-box-content-color:                 disabled;
 
