--- a/src/chrome/komodo/skin/plat/shared/tabs.less
+++ b/src/chrome/komodo/skin/plat/shared/tabs.less
@@ -418,7 +418,7 @@ ko-pane[type="icons"] .pane-tabs-container tabs .tabstrip-box
 {
     background: @tab-box-background-icons;
     border-width: 0;
-    border-bottom: @tab-box-border;
+    border-bottom: @tab-box-border-icons;
     
     box-shadow: @tab-box-box-shadow-icons;
 
