Icons: Icons are now generated from SVG's on-demand
This allows for proper HIDPI support across all icon colors as well as
allow more flexible control over icon color and states
rn=

(integrated from master branch change 86c65e0 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/panes.less
+++ b/src/chrome/komodo/skin/plat/shared/panes.less
@@ -147,7 +147,7 @@ ko-pane .pane-empty-container description
 ko-pane:not([ko-pane-drag-status]) .pane-drop-placeholders > :not(splitter)
 {
     background-color: @pane-customize-draggable-background-color;
-    background-image: url("chrome://icomoon/skin/icons/move.png");
+    background-image: url("koicon://ko-svg/chrome/icomoon/skin/move.svg");
     background-position: center;
     background-repeat: no-repeat;
     border: @pane-customize-draggable-border;
@@ -161,7 +161,7 @@ ko-pane:not([ko-pane-drag-status]) .pane-drop-placeholders > :not(splitter):hove
 /* Drop Area */
 ko-pane[ko-pane-drag-status] .pane-drop-placeholders {
   background-color: @pane-customize-droppable-background-color;
-  background-image: url("chrome://icomoon/skin/icons/download3.png");
+  background-image: url("koicon://ko-svg/chrome/icomoon/skin/download3.svg");
   background-position: center;
   background-repeat: no-repeat;
   border: @pane-customize-droppable-border;
