--- a/src/modules/notify/skin/notify.less
+++ b/src/modules/notify/skin/notify.less
@@ -59,15 +59,14 @@
             opacity: 1.0;
         }
 
-        /* Todo: use iconpack and koicon */
         &.menu
         {
-            background: url(chrome://notify/skin/icons/cog.png) center left no-repeat;
+            background: url(koicon://ko-svg/chrome/icomoon/skin/cog2.svg?preset=hud) center left no-repeat;
         }
 
         &.undo
         {
-            background: url(chrome://notify/skin/icons/undo.png) center left no-repeat;
+            background: url(koicon://ko-svg/chrome/icomoon/skin/undo2.svg?preset=hud) center left no-repeat;
         }
     }
 
