--- a/src/chrome/komodo/skin/partials/scheme-skinning.less
+++ b/src/chrome/komodo/skin/partials/scheme-skinning.less
@@ -1,10 +1,12 @@
 .setVars() when (@dark = 1)
 {
+    @_background:           lighten(@background, 5%);
+    
     @foreground-focus:      lighten(@foreground, 20%);
-    @background-contrast:   darken(@background, 10%);
-    @border:                lighten(@background, 5%);
-    @background-button:     lighten(@background, 5%);
-    @background-button-hover:lighten(@background, 10%);
+    @background-contrast:   darken(@_background, 10%);
+    @border:                lighten(@_background, 5%);
+    @background-button:     lighten(@_background, 5%);
+    @background-button-hover:lighten(@_background, 10%);
     @background-odd:        fade(darken(@background-contrast, 3%), 80%);
     @background-input:      lighten(@background-contrast, 10%);
     @background-image:      linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3));
@@ -13,11 +15,13 @@
 
 .setVars() when (@dark = 0)
 {
+    @_background:           darken(@background, 5%);
+    
     @foreground-focus:      darken(@foreground, 10%);
-    @background-contrast:   darken(@background, 5%);
-    @border:                darken(@background, 10%);
-    @background-button:     lighten(@background, 10%);
-    @background-button-hover:lighten(@background, 15%);
+    @background-contrast:   darken(@_background, 5%);
+    @border:                darken(@_background, 10%);
+    @background-button:     lighten(@_background, 10%);
+    @background-button-hover:lighten(@_background, 15%);
     @background-odd:        fade(darken(@background-contrast, 1%), 80%);
     @background-input:      darken(@background-contrast, 10%);
     @background-image:      linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1));
@@ -154,7 +158,7 @@ statusbar#statusbarviewbox
     background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2)) !important;
     color: @foreground !important;
     border: 0 !important;
-    border-top: 1px solid contrast(@background, darken(@background, 10%), lighten(@background, 10%)) !important;
+    border-top: 1px solid contrast(@_background, darken(@_background, 10%), lighten(@_background, 10%)) !important;
 
     statusbarpanel
     {
@@ -187,7 +191,7 @@ statusbar#statusbarviewbox
 
         &:hover
         {
-            background: fade(darken(@background, 5%), 60%) !important;
+            background: fade(darken(@_background, 5%), 60%) !important;
             color: lighten(@foreground, 10%) !important;
         }
     }
@@ -195,7 +199,7 @@ statusbar#statusbarviewbox
     sectionlist textbox
     {
         -moz-appearance: none !important;
-        background: lighten(@background, 5%) !important;
+        background: lighten(@_background, 5%) !important;
         color: @foreground !important;
         border: 0 !important;
     }
