Skin: Show border around HUD buttons
(integrated from master branch change bcedda0 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/partials/scheme-skinning.less
+++ b/src/chrome/komodo/skin/partials/scheme-skinning.less
@@ -128,6 +128,7 @@
     {
         background-color: @background-button !important;
         background-image: @background-image !important;
+        border: 1px solid @border !important;
 
         &:hover
         {
