Skin: Color the quicklaunch icons properly
(integrated from master branch change f2a3e49 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/icons_rules.less
+++ b/src/chrome/komodo/skin/plat/shared/icons_rules.less
@@ -1659,3 +1659,37 @@ ko-pane[type="icons"]
 
 }
 
+.hud
+{
+    .new-file-icon
+    {
+        list-style-image: @icon-hud-new-file !important;
+    }
+    
+    .new-template-icon
+    {
+        list-style-image: @icon-hud-new-template !important;
+    }
+    
+    .project-icon
+    {
+        list-style-image: @icon-hud-project !important;
+    }
+    
+    .open-file-icon
+    {
+        list-style-image: @icon-hud-open-file !important;
+    }
+    
+    .preferences-icon,
+    .cog-icon
+    {
+        list-style-image: @icon-hud-gear !important;
+    }
+    
+    .customize-panes-icon
+    {
+        list-style-image: @icon-hud-customize-panes;
+    }
+
+}
