--- a/src/chrome/komodo/skin/plat/shared/_config/icons.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/icons.less
@@ -2,11 +2,13 @@
 @icon-toolbar-url-prefix:       "koicon://ko-svg/chrome/icomoon/skin/";
 @icon-widget-url-prefix:        "koicon://ko-svg/chrome/icomoon/skin/";
 @icon-selected-url-prefix:      "koicon://ko-svg/chrome/icomoon/skin/";
+@icon-hud-url-prefix:           "koicon://ko-svg/chrome/icomoon/skin/";
 
 @icon-url-suffix:               "?preset=base";
 @icon-toolbar-url-suffix:       "?preset=toolbar";
 @icon-widget-url-suffix:        "?preset=widgets";
 @icon-selected-url-suffix:      "?preset=selected";
+@icon-hud-url-suffix:           "?preset=hud";
 
 /* Action Icons */
 @icon-undo:                     url("chrome://komodo/skin/images/undo.png");
@@ -416,3 +418,12 @@
 @icon-pref-httpinspect:         url("@{icon-url-prefix}direction.svg@{icon-url-suffix}");
 @icon-pref-formatters:          url("@{icon-url-prefix}clear-formatting.svg@{icon-url-suffix}");
 @icon-pref-notify:              url("@{icon-url-prefix}notification2.svg@{icon-url-suffix}");
+
+/* Hud Icons */
+
+@icon-hud-new-file:                 url("@{icon-hud-url-prefix}file-plus.svg@{icon-hud-url-suffix}");
+@icon-hud-new-template:             url("@{icon-hud-url-prefix}file6.svg@{icon-hud-url-suffix}");
+@icon-hud-project:                  url("@{icon-hud-url-prefix}box.svg@{icon-hud-url-suffix}");
+@icon-hud-open-file:                url("@{icon-hud-url-prefix}folder-open.svg@{icon-hud-url-suffix}");
+@icon-hud-gear:                     url("@{icon-hud-url-prefix}ko_cog_small.svg@{icon-hud-url-suffix}");
+@icon-hud-customize-panes:          url("@{icon-hud-url-prefix}grid3.svg@{icon-hud-url-suffix}");
