fix: Notify: Resolve focus stealing issues, add "close" button
(integrated from master branch change a05859d by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/notify/skin/notify.less
+++ b/src/modules/notify/skin/notify.less
@@ -68,6 +68,11 @@
         {
             background: url(koicon://ko-svg/chrome/icomoon/skin/undo2.svg?preset=hud) center left no-repeat;
         }
+        
+        &.close
+        {
+            background: url(koicon://ko-svg/chrome/icomoon/skin/close2.svg?preset=hud) center left no-repeat;
+        }
     }
 
 
