Findbar: Streamline with rest of UI
(integrated from master branch change 95e267f by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/_config/icons.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/icons.less
@@ -427,3 +427,14 @@
 @icon-hud-open-file:                url("@{icon-hud-url-prefix}folder-open.svg@{icon-hud-url-suffix}");
 @icon-hud-gear:                     url("@{icon-hud-url-prefix}ko_cog_small.svg@{icon-hud-url-suffix}");
 @icon-hud-customize-panes:          url("@{icon-hud-url-prefix}grid3.svg@{icon-hud-url-suffix}");
+@icon-hud-case-sensitive:           url("@{icon-hud-url-prefix}type.svg@{icon-hud-url-suffix}");
+@icon-hud-case-insensitive:         url("@{icon-hud-url-prefix}font-size.svg@{icon-hud-url-suffix}");
+@icon-hud-case-smart-size:          url("@{icon-hud-url-prefix}text-height.svg@{icon-hud-url-suffix}");
+@icon-hud-open-find:                url("@{icon-hud-url-prefix}search3.svg@{icon-hud-url-suffix}");
+@icon-hud-down:                     url("@{icon-hud-url-prefix}arrow-down4.svg@{icon-hud-url-suffix}");
+@icon-hud-up:                       url("@{icon-hud-url-prefix}arrow-up4.svg@{icon-hud-url-suffix}");
+@icon-hud-close:                    url("@{icon-hud-url-prefix}close2.svg@{icon-hud-url-suffix}");
+@icon-hud-dropmarker:               url("@{icon-hud-url-prefix}arrow-down2.svg@{icon-hud-url-suffix}");
+@icon-hud-findpattern-simple:       url("@{icon-hud-url-prefix}quotes-right3.svg@{icon-hud-url-suffix}");
+@icon-hud-findpattern-wildcard:     url("@{icon-hud-url-prefix}power.svg@{icon-hud-url-suffix}");
+@icon-hud-findpattern-regex:        url("@{icon-hud-url-prefix}ko_regexp.svg@{icon-hud-url-suffix}");
