--- a/src/chrome/komodo/skin/plat/shared/icons_rules.less
+++ b/src/chrome/komodo/skin/plat/shared/icons_rules.less
@@ -901,7 +901,7 @@ statusbar .menu-icon
 /* Use same image for checked as the button itself already has a toggle effect */
 #pin-btn, #pin-btn[checked]
 {
-    list-style-image: @icon-pin;
+    list-style-image: @icon-pin !important;
 }
 
 .komodo-button-community
