Quickfind: change icon for opening search in dialog
(integrated from master branch change 3aa6099 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/_config/icons.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/icons.less
@@ -430,7 +430,7 @@
 @icon-hud-case-sensitive:           url("@{icon-hud-url-prefix}type.svg@{icon-hud-url-suffix}");
 @icon-hud-case-insensitive:         url("@{icon-hud-url-prefix}font-size.svg@{icon-hud-url-suffix}");
 @icon-hud-case-smart-size:          url("@{icon-hud-url-prefix}text-height.svg@{icon-hud-url-suffix}");
-@icon-hud-open-find:                url("@{icon-hud-url-prefix}search3.svg@{icon-hud-url-suffix}");
+@icon-hud-open-find:                url("@{icon-hud-url-prefix}new-tab.svg@{icon-hud-url-suffix}");
 @icon-hud-down:                     url("@{icon-hud-url-prefix}arrow-down4.svg@{icon-hud-url-suffix}");
 @icon-hud-up:                       url("@{icon-hud-url-prefix}arrow-up4.svg@{icon-hud-url-suffix}");
 @icon-hud-close:                    url("@{icon-hud-url-prefix}close2.svg@{icon-hud-url-suffix}");
