fix: Skin: Ensure hud textboxes are properly colored
(integrated from master branch change 54da68e by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/partials/scheme-skinning.less
+++ b/src/chrome/komodo/skin/partials/scheme-skinning.less
@@ -204,6 +204,12 @@ statusbar#statusbarviewbox
         background: lighten(@_background, 5%) !important;
         color: @foreground !important;
         border: 0 !important;
+        
+        & > hbox
+        {
+            -moz-appearance: none !important;
+            background: transparent !important;
+        }
     }
 
     .statusbar-resizerpanel
