--- a/src/chrome/komodo/skin/plat/shared/editor.less
+++ b/src/chrome/komodo/skin/plat/shared/editor.less
@@ -90,12 +90,13 @@
     textbox
     {
         -moz-appearance: none !important;
-        background-color: @hud-selection-background;
+        background-color: @hud-selection-background !important;
         border: 0;
 
         & > hbox
         {
             -moz-appearance: none !important;
+            background-color: transparent !important;
         }
     }
 
