--- a/src/chrome/komodo/skin/plat/shared/modules.less
+++ b/src/chrome/komodo/skin/plat/shared/modules.less
@@ -288,6 +288,7 @@ wizard#accountSetup
             background-image: @icon-breadcrumb-arrow;
             margin-right: -16px;
             width: 16px;
+            max-width: 16px;
             height: 16px;
             opacity: 0.6;
         }
