--- a/src/chrome/komodo/skin/plat/shared/icons_rules.less
+++ b/src/chrome/komodo/skin/plat/shared/icons_rules.less
@@ -7,7 +7,10 @@ button, toolbarbutton, menuitem
     image[class$='-icon'], image[class$='-icon'],
     image[class$='_icon'], image[class$='_icon']
     {
-        max-width: 16px;
+        &:not(.autorepeatbutton-icon)
+        {
+            max-width: 16px;
+        }
     }
 }
 
