--- a/src/modules/notify/skin/notify.less
+++ b/src/modules/notify/skin/notify.less
@@ -9,19 +9,24 @@
     background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3));
     box-shadow: inset 0 0 0 1px rgba(255,255,255, 0.2), 0 0 6px rgba(0, 0, 0, 0.4);
 
-    &.notification
+    &.p-notification
     {
         background-color: rgba(81, 79, 117, 0.9);
     }
 
-    &.warning
+    &.p-warning
     {
         background-color: rgba(106, 114, 78, 0.9);
     }
 
-    &.error
+    &.p-error
     {
         background-color: rgba(114, 78, 78, 0.9);
+    }
+    
+    &.p-now
+    {
+        background-color: rgba(58, 58, 58, 0.9);
     }
 
     &.clickable description
