fix: Debugger: Using nonexistant icon
(integrated from master branch change 3aaaf59 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/_config/icons.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/icons.less
@@ -277,7 +277,7 @@
 @icon-debug-break:              url("@{icon-url-prefix}pause2.svg@{icon-url-suffix}");
 @icon-debug-stop:               url("@{icon-url-prefix}stop2.svg@{icon-url-suffix}");
 @icon-debug-detach:             url("@{icon-url-prefix}forward3.svg@{icon-url-suffix}");
-@icon-debug-inspect:            url("@{icon-url-prefix}ko_forward3.svg@{icon-url-suffix}");
+@icon-debug-inspect:            url("@{icon-url-prefix}search3.svg@{icon-url-suffix}");
 
 @icon-debug-tab-starting:       url("@{icon-url-prefix}arrow-right3.svg@{icon-url-suffix}");
 @icon-debug-tab-running:        url("@{icon-url-prefix}play4.svg@{icon-url-suffix}");
