Commando: Files: Added "Create File" command
(integrated from master branch change 4895659 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/commando/skin/commando.less
+++ b/src/modules/commando/skin/commando.less
@@ -59,6 +59,11 @@
         max-width: 490px;
     }
     
+    #commando-tip[tip-type="error"]
+    {
+        color: #894343 !important;
+    }
+    
     #commando-loader
     {
         height: 1px;
