--- a/src/modules/abyss_skin/skin/_config/icons.less
+++ b/src/modules/abyss_skin/skin/_config/icons.less
@@ -5,12 +5,12 @@
 @icon-project:                  url("chrome://fugue/skin/icons/blue-folder-open-document.png");
 @icon-new-project:              @icon-project;
 
-@icon-checkbox:                 url("@{icon-url-prefix}checkbox-unchecked3.png");
-@icon-checkbox-checked:         url("@{icon-url-prefix}checkbox-checked2.png");
-@icon-radio:                    url("@{icon-url-prefix}radio-unchecked.png");
-@icon-radio-selected:           url("@{icon-url-prefix}radio-checked.png");
+@icon-checkbox:                 url("@{icon-url-prefix}checkbox-unchecked.svg");
+@icon-checkbox-checked:         url("@{icon-url-prefix}checkbox-checked.svg");
+@icon-radio:                    url("@{icon-url-prefix}radio-unchecked.svg");
+@icon-radio-selected:           url("@{icon-url-prefix}radio-checked.svg");
 
-@icon-menu-arrow:               url("@{icon-url-prefix}arrow-right3.png");
+@icon-menu-arrow:               url("@{icon-url-prefix}arrow-right3.svg");
 
 /* Breadcrumbs */
 @icon-breadcrumb-project:       @icon-project;
