--- a/src/modules/abyss_skin/skin/_config/window.less
+++ b/src/modules/abyss_skin/skin/_config/window.less
@@ -112,7 +112,8 @@
 @statusbar-border-style:                solid;
 @statusbar-border-color:                @main-border-color;
 @statusbar-panel-border-image:          none;
-@statusbar-button-border:               1px solid transparent;
+@statusbar-button-border:               0;
+@statusbar-button-border-hover:         0;
 
 @list-tree-appearance:                       none;
 @list-tree-background:                       lighten(@window-background, 5%);
