UI: Style tabpanels and pref windows as intended by platform
(integrated from master branch change 24226a1 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/_config/tabs.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/tabs.less
@@ -1,3 +1,4 @@
+@tab-box-appearance:                    tabpanels;
 @tab-box-box-shadow:                    none;
 @tab-box-border:                        1px solid rgba(0,0,0,0.3);
 @tab-box-background-color:              Window;
