--- a/src/modules/abyss_skin/skin/_config/tabs.less
+++ b/src/modules/abyss_skin/skin/_config/tabs.less
@@ -1,5 +1,6 @@
 @import url("chrome://komodo/skin/plat/current/_config/tabs.less");
 
+@tab-box-appearance:                    none;
 @tab-box-box-shadow:                    none;
 @tab-box-border:                        1px solid lighten(@main-border-color, 2%);
 @tab-box-background-color:              @window-background;
